--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Data Science Group | СФ БашГУ г.Стерлитамак</title>
+  <title>Зубайдуллин Айдар Ильдарович</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -181,14 +181,8 @@
 
                   <div class="summary"> 
                       <p>
-                          I worked at the music label Displeased Records.
-                          At the time this is where I wanted to be, working for the biggest underground Dutch music label.
-                          Here I made sure the warehouse was organized.All the incoming packages where handled, 
-                          and all the outgoing packages where billed and complete.
-                          My secondary role was to manage our outdoor music festival sales stand. 
-                          That's what made this job unique, there weren't many Dutch music labels 
-                          that provided a fulltime job and the ability to visit music festivals at the same time.
-                          I enjoyed this job a lot, until it was time for me to move on and continue my education.
+                          Тут мой супер крутой текст который никто не удет чиать азазазаза
+                    
                       </p>
                   </div>
               </div><!-- end displeased records -->
@@ -206,12 +200,7 @@
 
                   <div class="summary"> 
                       <p>
-                          At the Campina milk factory I worked different shifts. 
-                          Day shifts / Night shifts. It didn't really matter to me, I just wanted to make hours. 
-                          Every day I stayed late helping other people. 
-                          I worked at nearly all the departments available in the factory; 
-                          from production to warehouse managing. 
-                          I met a lot of people and learned how they handled their schedules and various problems on a daily basis.
+                         питон изи катка 
                       </p>
                   </div>
               </div><!-- end campina -->
@@ -229,9 +218,7 @@
 
                   <div class="summary"> 
                       <p>
-                          During this period I worked for an employment agency. 
-                          Here I took every available job and gained a lot of experience in production enviroments with a lot of different people.
-                          A few companies i worked for:
+                        проверка связи 
                       </p>
                   </div>
               </div><!--end randstad -->
@@ -251,12 +238,8 @@
 
                   <div class="summary"> 
                       <p>
-                          This was an incredibly heavy job. 
-                          I have a lot of respect for the people who still do it to this day.
-			              My task was to completely empty and clean houses. 
-			              All these homes where neglected and fully stuffed with hoarded materials. 
-                          I encountered situations most people would have walked away from.
-                      </p>
+                          ввиапгвимчватмпадм
+			  </p>
                   </div>
               </div><!--end 3 sterre service -->
               
